// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<Link
  to={
    Object {
      "pathname": "/component_measures",
      "search": "?id=project123&metric=other&view=list",
    }
  }
>
  label
</Link>
`;

exports[`should render issuesLink correctly 1`] = `
<Link
  to={
    Object {
      "hash": "",
      "pathname": "/project/issues",
      "search": "?resolved=false&id=project123",
    }
  }
>
  label
</Link>
`;
